@@ -71,7 +71,9 @@ New Features
 * GITHUB#12033: Support for Java 19 foreign memory support is now enabled by default,
   no need to pass "--enable-preview" on the command line. If exactly Java 19 is used,
   MMapDirectory will mmap Lucene indexes in chunks of 16 GiB (instead of 1 GiB) and
-  indexes closed while queries are running can no longer crash the JVM.  (Uwe Schindler)
+  indexes closed while queries are running can no longer crash the JVM.
+  To disable this feature, pass the following sysprop on Java command line:
+  "-Dorg.apache.lucene.store.MMapDirectory.enableMemorySegments=false" (Uwe Schindler)
 
 * GITHUB#11869: RangeOnRangeFacetCounts added, supporting numeric range "relationship" faceting over docvalue-stored
   ranges. (Marc D'Mello)
